--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dine-craft</title>
+    <title>Resources</title>
     <meta name="description" content="Resources" />
     <meta name="author" content="RESOURCES" />
 
-    <meta property="og:title" content="dine-craft" />
+    <meta property="og:title" content="Resources" />
     <meta property="og:description" content="Resources" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://in.pinterest.com/pin/17592254791219427/" />
+    <meta property="og:image" content="https://imgs.search.brave.com/MPiHEXZuAxHGY-aV-RsBt3EORyFA-vW5xtujtwoFdvY/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzAxLzM5LzIxLzUx/LzM2MF9GXzEzOTIx/NTEwNV9WY0daYmNh/RlFjYXN0N3VvN2h2/ZkF3YnR5T3ZiUFVT/ay5qcGc" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="dine-craft" />
-    <meta name="twitter:image" content="https://in.pinterest.com/pin/17592254791219427/" />
+    <meta name="twitter:site" content="Resources" />
+    <meta name="twitter:image" content="https://imgs.search.brave.com/MPiHEXZuAxHGY-aV-RsBt3EORyFA-vW5xtujtwoFdvY/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzAxLzM5LzIxLzUx/LzM2MF9GXzEzOTIx/NTEwNV9WY0daYmNh/RlFjYXN0N3VvN2h2/ZkF3YnR5T3ZiUFVT/ay5qcGc" />
   </head>
 
   <body>
